--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+  <title>My Site Title</title>
+</head>
+<body>
+  <h1>Hello, World!</h1>
+  <a href="https://flatironschool.com">Flatiron School</a>
+  <!-- Add your website content here -->
+</body>
+</html>
